--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ jobs:
     steps:
       - checkout
 
+      # Add npm audit step
+      - run:
+          name: Audit npm packages
+          command: npm audit
+
       # Download and cache dependencies
       - restore_cache:
           keys:
