--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
       # run tests!
       - run: npm run test
       - run: npm run build
+      - run: npm config get registry
 
       # Add npm audit step
       - run:
