--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,11 @@ jobs:
       #       # fallback to using the latest cache if no exact match is found
       #       - v1-dependencies-
 
+      # Met à jour npm vers la dernière version
+      - run:
+          name: Update npm
+          command: "npm install -g npm@latest"
+
       - run: npm install
       - run: npm audit
 
