--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           command: "npm --version"
 
       - run: npm install
-      - run: npm audit
+      - run: npm audit --audit-level=high
 
       # - save_cache:
       #     paths:
