--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
           command: "npm --version"
 
       - run: npm install
+      - run: npm run lint
       - run: npm audit --audit-level=high
 
       - save_cache:
