--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
   },
   "devDependencies": {
     "@types/history": "^4.7.5",
+    "eslint": "^8.57.1",
     "jest-watch-typeahead": "^0.6.5"
   },
   "overrides": {
     "nth-check": "^2.0.1",
     "braces": "^3.0.3"
   }
-} 
+}
