--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "bootstrap": "node ./bootstrap-fauna-database.js"
+    "bootstrap": "node ./bootstrap-fauna-database.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
