--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
         "node": true
     },
     "extends": [
-        "standard-with-typescript",
+        "eslint:recommended",
         "plugin:react/recommended"
     ],
     "parserOptions": {
